--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "A slackbot to help us track the highlight, lowlights, and hopes of our day",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "dev": "nodemon app.js",
+    "db:create": "sequelize-cli db:create",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:g:migration": "sequelize-cli migration:generate --name",
+    "db:g:seed": "sequelize-cli seed:generate --name",
+    "db:seeds": "sequelize-cli db:seed:all"
   },
   "repository": {
     "type": "git",
@@ -21,6 +27,14 @@
   },
   "homepage": "https://github.com/meliho/roses-buds-thorns-slackbot#readme",
   "dependencies": {
-    "@slack/bolt": "^3.7.0"
+    "@slack/bolt": "^3.7.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.14.0"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.14",
+    "sequelize-cli": "^6.0.0"
   }
 }
