--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test",
     "dev": "nodemon app.js",
     "build": "yarn run db:migrate",
+    "start": "node app.js",
     "db:create": "sequelize-cli db:create",
     "db:migrate": "sequelize-cli db:migrate",
     "db:g:migration": "sequelize-cli migration:generate --name",
